# sonic-sairedis

./: azure-pipelines.yml
.azure-pipelines/: build-swss-template.yml  build-template.yml
syncd/: BaseRedisClient.h  DisabledRedisClient.cpp  DisabledRedisClient.h  HardReiniter.cpp  HardReiniter.h  Makefile.am  NotificationProcessor.cpp  NotificationProcessor.h  RedisClient.cpp  SaiSwitch.cpp  SaiSwitch.h  SingleReiniter.cpp  SingleReiniter.h  Syncd.cpp  Syncd.h  VirtualOidTranslator.cpp  VirtualOidTranslator.h
syncd/scripts/: syncd_init_common.sh
syncd/tests/: Makefile.am  TestDisabledRedisClient.cpp
unittest/syncd/: TestNotificationProcessor.cpp  TestSyncd.cpp  TestVirtualOidTranslator.cpp
